# auth-service-py

./: README.md  docker-compose.yml  pyproject.toml
auth-service/: Dockerfile  entrypoint.sh  requirements.txt
auth-service/scripts/: seed_db.py
auth-service/src/: main.py
auth-service/src/application/services/: auth_service.py
auth-service/src/controllers/api/: auth_router.py  user_router.py
auth-service/src/infrastructure/persistence/: mongo_repository.py
auth-service/src/infrastructure/security/: jwt.py
auth-service/tests/: conftest.py  test_auth.py
secure-api/: Dockerfile  requirements.txt
secure-api/src/: main.py
secure-api/src/controllers/api/: secure_router.py
secure-api/src/security/: verify_token.py
secure-api/tests/: test_secure.py
