[tool.poetry]
name = "auth-service-py"
version = "0.1.0"
description = ""
authors = ["Hamsa Jama <hamsajama86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
fastapi = "^0.111.0"
pymongo = "^4.7.3"
pydantic = "^2.7.3"
python-jose = "^3.3.0"
passlib = "^1.7.4"
slowapi = "^0.1.9"
redis = "^5.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
